fixed a bug where canvas slider would appear behind canvas overlay when user is prompted to confirm generation of new canvas

--- a/style.css
+++ b/style.css
@@ -47,7 +47,6 @@ h3 {
     background-color: hsla(0, 0%, 100%, 0.5);
     backdrop-filter: blur(4px);
     cursor: auto;
-    z-index: 1; /* remove when done */
 }
 
 dialog {
@@ -56,7 +55,6 @@ dialog {
     border: solid var(--light-grey) 1px;
     border-radius: 0.5rem;
     box-shadow: 0px 0px 8px var(--light-grey);
-
 }
 
 .dialog-text {
